--- a/MetalBasicTessellation/Base.lproj/Main.storyboard
+++ b/MetalBasicTessellation/Base.lproj/Main.storyboard
@@ -65,6 +65,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <connections>
                                                     <action selector="insideHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="taG-Mc-qUg"/>
+                                                    <action selector="sliderHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="oig-1c-h73"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="  2.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftL-mr-Vr3">
