--- a/MetalBasicTessellation/Base.lproj/Main.storyboard
+++ b/MetalBasicTessellation/Base.lproj/Main.storyboard
@@ -64,8 +64,7 @@
                                                 <rect key="frame" x="52" y="0.0" width="116" height="31"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <connections>
-                                                    <action selector="insideHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="taG-Mc-qUg"/>
-                                                    <action selector="sliderHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="oig-1c-h73"/>
+                                                    <action selector="insideHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="3ux-rV-h09"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="  2.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftL-mr-Vr3">
@@ -93,7 +92,7 @@
                                                 <rect key="frame" x="52" y="0.0" width="116" height="31"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <connections>
-                                                    <action selector="sliderHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="9W0-ld-cvD"/>
+                                                    <action selector="sliderHorizon:" destination="gOs-63-a41" eventType="valueChanged" id="oVB-ZQ-Zjh"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="  2.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvc-BA-5ON">
